syntax = "proto3";

package apollo.proto.agent.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/dennishilgert/apollo/pkg/proto/agent/v1;agent";

service Agent {
  rpc Invoke(InvokeRequest) returns (InvokeResponse) {}
}

message InvokeRequest {
  ConfigData config = 1;
  ContextData context = 2;
  EventData event = 3;
}

message ConfigData {
  string runtime_binary_path = 1;
  repeated string runtime_binary_args = 2;
}

message ContextData {
  string runtime = 1;
  string runtime_version = 2;
  string runtime_handler = 3;
  int32 v_cpu_cores = 4;
  int32 memory_limit = 5;
}

message EventData {
  string id = 1;
  string type = 2;
  google.protobuf.Struct data = 3;
}

message InvokeResponse {
  string event_id = 1;
  int32 status = 2;
  string status_message = 3;
  string duration = 6;
  repeated google.protobuf.Struct logs = 4;
  google.protobuf.Struct data = 5;
}