syntax = "proto3";

package agent.v1;
option go_package = "/agent/v1";

import "google/protobuf/timestamp.proto";

message RequestContext {
  string request_id = 1;
  string domain_name = 2;
  string domain_prefix = 3;
  RequestContextHttp http = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message RequestContextHttp {
  string method = 1;
  string path = 2;
  string protocol = 3;
  string source_ip = 4;
  string user_agent = 5;
}